fix: opengraph image

--- a/index.html
+++ b/index.html
@@ -8,6 +8,23 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta name="apple-mobile-web-app-title" content="El Impostor" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://impostor-game-blush.vercel.app/" />
+    <meta property="og:title" content="El Impostor" />
+    <meta property="og:description" content="Juego de deduccion social con amigos - Descubre al impostor!" />
+    <meta property="og:image" content="https://impostor-game-blush.vercel.app/pwa-512x512.png" />
+    <meta property="og:image:width" content="512" />
+    <meta property="og:image:height" content="512" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://impostor-game-blush.vercel.app/" />
+    <meta name="twitter:title" content="El Impostor" />
+    <meta name="twitter:description" content="Juego de deduccion social con amigos - Descubre al impostor!" />
+    <meta name="twitter:image" content="https://impostor-game-blush.vercel.app/pwa-512x512.png" />
+
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon.png" />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
